# smarthire-ai-evaluator

./: Dockerfile  README.md  env.example  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  ui.py
agents/: baseline_agent.py
env/: __init__.py  base_env.py  models.py  openenv.yaml
grader/: grader.py
server/: app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
